create a simple  wikipedia

--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Real Hero MSD</title>
 </head>
-<body>
-    <HEAder>
-        <H1>The Real Hero MS</H1>
-    </HEAder>
-    <main>
-        <figure>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f0/Dhoni1234.png/330px-Dhoni1234.png" alt="MS DHONI" >
-            <figcaption>Fig.1 - MSD in 2011.</figcaption>
-          </figure>
-          <p>
-            Mahendra Singh Dhoni (/məˈheɪndrə ˈsɪŋ dhæˈnɪ/ (listen); born 7 July 1981), commonly known as MS Dhoni, is a former Indian cricketer and captain of the Indian national team in limited-overs formats from 2007 to 2017 and in Test cricket from 2008 to 2014. He is also the current captain of Chennai Super Kings in the Indian Premier League. Under his captaincy, India won the 2007 ICC World Twenty20, the 2011 Cricket World Cup, and the 2013 ICC Champions Trophy, the most by any captain. He also led India to victory in the 2010 and 2016 Asia Cup. Additionally, under his leadership, India won the 2010 and 2011 ICC Test Mace and 2013 ICC ODI Championship. Dhoni is a right-handed wicket-keeper batsman known for his calm captaincy and his ability to finish matches in tight situations. Mahi scored 17,266 runs in International Cricket (including 10,000 plus runs in ODI Internationals) and is considered one of the best finishers in the game. He is also one of the greatest wicket-keepers and captains in the history of cricket.
+<body style="text-align: center;background-color: rgb(162, 162, 166);>
+
+    <header>
+        <h1>The Real Hero MS</h1>
+    </header>
+    <main >
+<figure>
+  <img src="https://cdn.britannica.com/25/222725-050-170F622A/Indian-cricketer-Mahendra-Singh-Dhoni-2011.jpg" alt="MSD" style="width:100%">
+  <figcaption>Fig.1 -MSD.</figcaption>
+</figure>
+<p>            Mahendra Singh Dhoni (/məˈheɪndrə ˈsɪŋ dhæˈnɪ/ (listen); born 7 July 1981), commonly known as MS Dhoni, is a former Indian cricketer and captain of the Indian national team in limited-overs formats from 2007 to 2017 and in Test cricket from 2008 to 2014. He is also the current captain of Chennai Super Kings in the Indian Premier League. Under his captaincy, India won the 2007 ICC World Twenty20, the 2011 Cricket World Cup, and the 2013 ICC Champions Trophy, the most by any captain. He also led India to victory in the 2010 and 2016 Asia Cup. Additionally, under his leadership, India won the 2010 and 2011 ICC Test Mace and 2013 ICC ODI Championship. Dhoni is a right-handed wicket-keeper batsman known for his calm captaincy and his ability to finish matches in tight situations. Mahi scored 17,266 runs in International Cricket (including 10,000 plus runs in ODI Internationals) and is considered one of the best finishers in the game. He is also one of the greatest wicket-keepers and captains in the history of cricket.
           </p>
     </main>
     <footer>
